finished the lesson about angular architecture

--- a/04-angular-basics/login-ex/angular.json
+++ b/04-angular-basics/login-ex/angular.json
@@ -3,7 +3,7 @@
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
-    "my-first-ng-site": {
+    "login-ex": {
       "projectType": "application",
       "schematics": {
         "@schematics/angular:application": {
@@ -17,7 +17,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
-            "outputPath": "dist/my-first-ng-site",
+            "outputPath": "dist/login-ex",
             "index": "src/index.html",
             "main": "src/main.ts",
             "polyfills": "src/polyfills.ts",
@@ -27,7 +27,6 @@
               "src/assets"
             ],
             "styles": [
-              "./node_modules/@angular/material/prebuilt-themes/indigo-pink.css",
               "src/styles.css"
             ],
             "scripts": []
@@ -69,10 +68,10 @@
           "builder": "@angular-devkit/build-angular:dev-server",
           "configurations": {
             "production": {
-              "browserTarget": "my-first-ng-site:build:production"
+              "browserTarget": "login-ex:build:production"
             },
             "development": {
-              "browserTarget": "my-first-ng-site:build:development"
+              "browserTarget": "login-ex:build:development"
             }
           },
           "defaultConfiguration": "development"
@@ -80,7 +79,7 @@
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "browserTarget": "my-first-ng-site:build"
+            "browserTarget": "login-ex:build"
           }
         },
         "test": {
@@ -95,7 +94,6 @@
               "src/assets"
             ],
             "styles": [
-              "./node_modules/@angular/material/prebuilt-themes/indigo-pink.css",
               "src/styles.css"
             ],
             "scripts": []
@@ -104,5 +102,5 @@
       }
     }
   },
-  "defaultProject": "my-first-ng-site"
+  "defaultProject": "login-ex"
 }
